Add js files fot components structure

--- a/react-ecc-project/src/index.html
+++ b/react-ecc-project/src/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Project</title>
-    <meta name="description" content="A simple react project folder">
+    <meta name="author" content="Rubicela Cortes">
+    <meta name="description"
+        content="Lilights offers a well designed selection of lamps that bring light and style to your spaces">
+    <title>Lilights</title>
 </head>
 
 <body>
